--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/*css za navbar*/
+.nav {
+  background: #c78283;
   color: white;
+	position: sticky;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	top: 0;
+}
+  
+.nav__title{
+  background: #c78283;
+  margin: 0px 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav__item{
+  background: #c78283;
+  display: inline-block;
+  margin: 0px 30px;
+  
+  color: #fff;
+}
+a{
+  text-decoration: none;
+  color: #fff;
+}
+.nav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  border-bottom: solid 2px #fff;
+}
+.nav input[type=text]:focus {
+   
+  border: none;
+}
+.dugmePretraga {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #c78283;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+}
+ 
+.dugmePretraga:hover{
+  background-color: #df9899;
+}
+::placeholder{
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
