--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,68 @@ a{
 }
 
 
+/* css za pocetnu stranicu*/
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.pocetna{
+  background-image: url("https://www.shehnazbeautysalon.com.au/wp-content/uploads/2019/12/slider03.jpg");
+
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  padding-top: 500px;
+  padding-bottom: 100px;
+  
+}
+ 
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+
+.paragrafPocetna{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  right: 40%;
+ 
+  color: black;
+ 
+}
+ 
+
+
+  /* za tri diva */
+  .flex-container {
+    
+    display: flex;
+    flex-wrap: wrap;
+    background-color:rgb(199,130,131,0.5);
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+
+  }
+  
+  .flex-container > div {
+     border: black double;
+    background-color: #f1f1f1;
+    width: 25%;
+     
+    margin: 10px;
+    text-align: center;
+    padding: 20px;
+    background-color: transparent;
+  }
+
 
