--- a/src/App.css
+++ b/src/App.css
@@ -124,3 +124,13 @@ body, html {
   }
 
 
+/*css za str frizure*/
+.row{
+  padding: 10%;
+}
+
+.card-img-top{
+  height: 400px;
+  width: auto;
+
+}
