--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   
   color: #fff;
 }
-a{
+.link{
   text-decoration: none;
   color: #fff;
 }
@@ -130,7 +130,7 @@ body, html {
 }
 
 .card-img-top{
-  height: 400px;
+  height: 300px;
   width: auto;
 
 }
